src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Pairs__c</fullName>
        <label>Geo Pairs</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iso_Code__c</fullName>
        <externalId>true</externalId>
        <label>Iso Code</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>